Grease Pencil: fill does not work on python generated strokes #75302

Closed
opened 2020-04-02 12:05:52 +02:00 by Swann Martinez · 3 comments

System Information
Operating system: Windows 10 - version 10.0.18363 Build 18363
Graphics card: RTX 2060 - NVIDIA DRIVERS: 445.45

Blender Version
Broken: 2.83 (sub 11), branch: master, commit date: 2020-04-01 17:35, hash: a9963669f9, type: Release

Short description of error

When generating grease pencil strokes and assign it a material (with show_fill enabled) with python the results in the 2.83 master doesn't show the fill effect.

Exact steps for others to reproduce the error

The attached blend file contain one script that create a basic gpencil object and its material.

gp_fill_error.blend

MbkrljMuOq.mp4

**System Information** Operating system: Windows 10 - version 10.0.18363 Build 18363 Graphics card: RTX 2060 - NVIDIA DRIVERS: 445.45 **Blender Version** Broken: 2.83 (sub 11), branch: master, commit date: 2020-04-01 17:35, hash: a9963669f9d2, type: Release **Short description of error** When generating grease pencil strokes and assign it a material (with show_fill enabled) with python the results in the 2.83 master doesn't show the fill effect. **Exact steps for others to reproduce the error** The attached blend file contain one script that create a basic gpencil object and its material. [gp_fill_error.blend](https://archive.blender.org/developer/F8443174/gp_fill_error.blend) [MbkrljMuOq.mp4](https://archive.blender.org/developer/F8443185/MbkrljMuOq.mp4)
Author

Added subscriber: @slumber

Added subscriber: @slumber
Antonio Vazquez self-assigned this 2020-04-02 15:54:51 +02:00

This issue was referenced by b75a7c2f8f

This issue was referenced by b75a7c2f8fb81eb7da067128dd90e3cd11406ab4

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75302
No description provided.