Fix T75302: GPencil fill does not work on python generated strokes